--- a/src/app/components/dashboard/content/documents-and-diagnosis/documents-and-diagnosis.component.html
+++ b/src/app/components/dashboard/content/documents-and-diagnosis/documents-and-diagnosis.component.html
@@ -1,1 +1,16 @@
-<p>documents-and-diagnosis works!</p>
+<div class="main-container">
+    <app-header></app-header>
+    <div class="inner-navigation row">
+        <a [class.selected]="selectedOption == 'documents'" routerLink="visits">
+            <i class="fa fa-file-medical-alt"></i>
+            <span>Documents</span>
+        </a>
+        <a [class.selected]="selectedOption == 'diagnosis'" routerLink="appointments">
+            <i class="fa fa-stethoscope"></i> <span>Diagnostqiues</span>
+        </a>
+    </div>
+
+    <div class="body">
+        <router-outlet></router-outlet>
+    </div>
+</div>
