Documents Search Header init

--- a/src/app/components/dashboard/content/documents-and-diagnosis/documents-and-diagnosis.component.html
+++ b/src/app/components/dashboard/content/documents-and-diagnosis/documents-and-diagnosis.component.html
@@ -1,11 +1,11 @@
 <div class="main-container">
     <app-header></app-header>
     <div class="inner-navigation row">
-        <a [class.selected]="selectedOption == 'documents'" routerLink="visits">
+        <a [class.selected]="selectedOption == 'documents'" routerLink="documents">
             <i class="fa fa-file-medical-alt"></i>
             <span>Documents</span>
         </a>
-        <a [class.selected]="selectedOption == 'diagnosis'" routerLink="appointments">
+        <a [class.selected]="selectedOption == 'diagnosis'" routerLink="diagnosis">
             <i class="fa fa-stethoscope"></i> <span>Diagnostqiues</span>
         </a>
     </div>
