--- a/src/app/components/dashboard/content/documents-and-diagnosis/diagnosis-manager/diagnosis-manager.component.html
+++ b/src/app/components/dashboard/content/documents-and-diagnosis/diagnosis-manager/diagnosis-manager.component.html
@@ -1,1 +1,19 @@
-<p>diagnosis-manager works!</p>
+<div class="main-container">
+    <div class="body">
+        <div class="search-header">
+            <app-diagnosis-search-header (searchEvent)="search($event)"></app-diagnosis-search-header>
+        </div>
+        <div class="responses-list row">
+
+            <div class="col col-md-3" *ngFor="let response of neuronResponses">
+                <div class="response-container">
+                    <app-neuron-response [modelOutputs]="modelOutputs" [neuronResponse]="response"></app-neuron-response>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="pagination-container">
+        <app-pagination (pageSelected)="selectPage($event)" [count]="count" [loaded]="neuronResponses.length" [offset]="offset" [limit]="limit"></app-pagination>
+    </div>
+</div>
