--- a/src/app/components/dashboard/content/patient-visit/visit-documents/document/document.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-documents/document/document.component.html
@@ -9,7 +9,7 @@
             {{document.name}}
         </p>
     </div>
-    <div class="description-container">
+    <div class="description-container" *ngIf="!patientInfo">
         <p *ngIf="document.description">{{document.description}}</p>
         <p *ngIf="!document.description" class="no-desc">
             Aucun Description pour ce document
