Document Info done

--- a/src/app/components/dashboard/content/documents-and-diagnosis/diagnosis-manager/diagnosis-manager.component.html
+++ b/src/app/components/dashboard/content/documents-and-diagnosis/diagnosis-manager/diagnosis-manager.component.html
@@ -7,7 +7,7 @@
 
             <div class="col col-md-3" *ngFor="let response of neuronResponses">
                 <div class="response-container">
-                    <app-neuron-response [modelOutputs]="modelOutputs" [neuronResponse]="response"></app-neuron-response>
+                    <app-neuron-response [patientInfo]="true" [modelOutputs]="modelOutputs" [neuronResponse]="response"></app-neuron-response>
                 </div>
             </div>
 
