--- a/src/app/components/dashboard/content/documents-and-diagnosis/documents-manager/documents-manager.component.html
+++ b/src/app/components/dashboard/content/documents-and-diagnosis/documents-manager/documents-manager.component.html
@@ -7,7 +7,7 @@
 
             <div class="col col-md-3" *ngFor="let document of documents">
                 <div class="document-container">
-                    <app-document [document]="document"></app-document>
+                    <app-document [patientInfo]="true" [document]="document"></app-document>
                 </div>
             </div>
 
