--- a/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
+++ b/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
@@ -15,6 +15,9 @@
             <div class="page" *ngIf="page == 4">
                 <app-visit-check-up [visit]="visit"></app-visit-check-up>
             </div>
+            <div class="page" *ngIf="page == 5">
+                <app-visit-certificates></app-visit-certificates>
+            </div>
             <div class="page" *ngIf="page == 6">
                 <app-visit-documents [visit]="visit" *ngIf="visit.medicalFile"></app-visit-documents>
             </div>
