--- a/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
@@ -45,7 +45,7 @@
         <div class="center-v">
             <i class="fa fa-envelope-open-text"></i>
         </div>
-        <span>Courrier</span>
+        <span> certificats</span>
     </div>
     <div class="option" [class.selected]="selectedPage ==6" (click)="select(6)" *ngIf="!onlyGeneral">
         <div class="center-v">
