Certificat Submitter edited and Certificat Editor init

--- a/src/app/components/dashboard/content/patient-visit/visit-certificates/visit-certificates.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-certificates/visit-certificates.component.html
@@ -3,6 +3,6 @@
         <app-certificat-submitter [certificat]="certificat"></app-certificat-submitter>
     </div>
     <div class="side prescription-side primary-radius">
-        <app-prescription [type]="'prescription-certificat'" [title]="'Certificat Medical'" [visit]="visit"></app-prescription>
+        <app-prescription [certificat]="certificat" [type]="'prescription-certificat'" [title]="'Certificat Medical'" [visit]="visit"></app-prescription>
     </div>
 </div>
