--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription.component.html
@@ -11,7 +11,7 @@
                 <app-prescription-check-up [checkUpTypes]="checkUpTypes" [visit]="visit"></app-prescription-check-up>
             </div>
             <div *ngIf="type == 'prescription-certificat'">
-                <app-prescription-certificat></app-prescription-certificat>
+                <app-prescription-certificat [certificat]="certificat"></app-prescription-certificat>
             </div>
         </div>
         <div class="footer">
