--- a/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-submitter/certificat-submitter.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-submitter/certificat-submitter.component.html
@@ -1,4 +1,22 @@
+<!--
 <div class="NgxEditor__Wrapper">
     <ngx-editor-menu [editor]="editor" [toolbar]="toolbar"> </ngx-editor-menu>
     <ngx-editor [editor]="editor" [(ngModel)]="this.certificat.content" [placeholder]="'Rédiger'"></ngx-editor>
+</div>
+-->
+
+<div class="main-container">
+    <div class="certificat-header stretch-container">
+        <h5>{{this.selectedType}}</h5>
+        <select [(ngModel)]="selectedType">
+            <option *ngFor="let type of certificatTypes" [value]="type">{{type}}</option>
+        </select>
+    </div>
+    <div class="certificats-list">
+        <h5>Les Models des {{(selectedType == 'Certificat') ? ("Certificats Médicaux") : ("Compte-Rendus")}}
+        </h5>
+        <div class="certificat" *ngFor="let certificat of selectedTypeCertificats">
+            {{certificat.title}}
+        </div>
+    </div>
 </div>
