--- a/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-submitter/certificat-editor/certificat-editor.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-submitter/certificat-editor/certificat-editor.component.html
@@ -1,1 +1,17 @@
-<p>certificat-editor works!</p>
+<div class="main-container">
+    <div class="header">
+        <i class="fa fa-chevron-left" (click)="back()"></i>
+        <h5 class="title">
+            Rédiger le {{(certificatModel.type == 'Certificat') ? ("Certificat Médical") : ("Compte-Rendu")}}
+        </h5>
+
+    </div>
+
+    <div class="NgxEditor__Wrapper">
+        <ngx-editor-menu [editor]="editor" [toolbar]="toolbar"> </ngx-editor-menu>
+        <ngx-editor [editor]="editor" [(ngModel)]="certificat.html" [placeholder]="'Rédiger'"></ngx-editor>
+    </div>
+    <!--
+    <button (click)="save()">clicke</button>
+-->
+</div>
