--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -22,5 +22,6 @@
         <app-add-expense *ngIf="windowPage == 'add-expense'" (closeEvent)="close()"></app-add-expense>
         <app-prescription-model-submitter *ngIf="windowPage == 'prescription-model-submitter'" (closeEvent)="close()"></app-prescription-model-submitter>
         <app-document-submitter *ngIf="windowPage == 'document-submitter'" (closeEvent)="close()"></app-document-submitter>
+        <app-certificat-models *ngIf="windowPage == 'certificat-models'" (closeEvent)="close()"></app-certificat-models>
     </div>
 </div>
