--- a/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-models/certificat-models.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-models/certificat-models.component.html
@@ -1,1 +1,10 @@
-<p>certificat-models works!</p>
+<div class="main-container">
+    <div class="content primary-radius">
+        <h5>Les Models de Certificats</h5>
+        <div class="list">
+            <p class="model" *ngFor="let model of models" (click)="select(model)">
+                {{model.title}}
+            </p>
+        </div>
+    </div>
+</div>
