--- a/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-submitter/certificat-editor/certificat-editor.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-submitter/certificat-editor/certificat-editor.component.css
@@ -5,7 +5,7 @@ h5.title {
 }
 
 ::ng-deep .NgxEditor {
-    height: 560px;
+    height: 540px;
 }
 
 .NgxEditor__Wrapper {
@@ -34,4 +34,17 @@ h5.title {
 .header i:hover {
     background: rgb(38, 94, 215);
     color: white;
+}
+
+.controller button {
+    padding: 8px 16px;
+    border-radius: 8px;
+}
+
+.controller {
+    padding: 16px 0px;
+}
+
+.controller button.primary-button {
+    float: right;
 }
