--- a/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-submitter/certificat-editor/certificat-editor.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-submitter/certificat-editor/certificat-editor.component.html
@@ -2,7 +2,7 @@
     <div class="header">
         <i class="fa fa-chevron-left" (click)="back()"></i>
         <h5 class="title">
-            Rédiger le {{(certificatModel.type == 'Certificat') ? ("Certificat Médical") : ("Compte-Rendu")}}
+            Rédiger le {{(certificat.certificatModel.type == 'Certificat') ? ("Certificat Médical") : ("Compte-Rendu")}}
         </h5>
 
     </div>
@@ -11,7 +11,10 @@
         <ngx-editor-menu [editor]="editor" [toolbar]="toolbar"> </ngx-editor-menu>
         <ngx-editor [editor]="editor" [(ngModel)]="certificat.html" [placeholder]="'Rédiger'"></ngx-editor>
     </div>
-    <!--
-    <button (click)="save()">clicke</button>
--->
+    <div class="controller">
+        <button class="secondary-button" (click)="restart()">Réinsializer</button>
+        <button *ngIf="!isEdit" class="primary-button" (click)="save()">Ajouter <i class="fa fa-plus"></i></button>
+        <button *ngIf="isEdit" class="primary-button" (click)="edit()">Modifier <i class="fa fa-edit"></i></button>
+
+    </div>
 </div>
