Submit CheckUps Done

--- a/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-models/certificat-models.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-models/certificat-models.component.html
@@ -2,7 +2,7 @@
     <div class="content primary-radius">
         <h5>Les Models de Certificats</h5>
         <div class="list">
-            <p class="model" *ngFor="let model of models" (click)="select(model)">
+            <p class="model" *ngFor="let model of certificatModels" (click)="select(model)">
                 {{model.title}}
             </p>
         </div>
