--- a/src/app/components/global/no-visit-background/no-visit-background.component.html
+++ b/src/app/components/global/no-visit-background/no-visit-background.component.html
@@ -1,1 +1,5 @@
-<p>no-visit-background works!</p>
+<div class="main-container">
+    <div class="message-container">
+        <p>{{message}}</p>
+    </div>
+</div>
