--- a/src/app/components/dashboard/content/patient-visit/visit-information/visit-vital-setting/visit-vital-setting.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-information/visit-vital-setting/visit-vital-setting.component.html
@@ -1,8 +1,9 @@
 <div class="main-container primary-radius">
+
+    <app-no-visit-background *ngIf="!active"></app-no-visit-background>
     <h5>
         Les pramétres vitaux
     </h5>
-
     <div class="row">
         <div class="col col-md-6">
             <div class="stretch-container">
@@ -14,7 +15,6 @@
                 </div>
             </div>
         </div>
-
         <div class="col col-md-6">
             <div class="stretch-container">
                 <div class="icon-container">
