--- a/src/app/components/global/no-visit-background/no-visit-background.component.css
+++ b/src/app/components/global/no-visit-background/no-visit-background.component.css
@@ -6,10 +6,11 @@
     left: 0px;
     top: 0px;
     padding: 16px;
+    z-index: 1;
 }
 
 .message-container {
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.7);
     width: 100%;
     height: 100%;
     display: flex;
