--- a/src/app/components/dashboard/content/general/general-line-chart/general-line-chart-header/general-line-chart-header.component.html
+++ b/src/app/components/dashboard/content/general/general-line-chart/general-line-chart-header/general-line-chart-header.component.html
@@ -3,9 +3,8 @@
     <div class="controller stretch-container">
         <p><span class="round"></span>Consultations</p>
         <p><span class="round"></span>Gain</p>
-        <button>
-            l'année dernière 
-        </button>
+        <select [(ngModel)]="selectedOption" (change)="selectPeriod()"> 
+            <option (click)="selectPeriod()" *ngFor="let option of options" [value]="option">{{option}}</option>
+        </select>
     </div>
-
 </div>
