--- a/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
+++ b/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
@@ -4,7 +4,7 @@
         <app-visit-header [onlyGeneral]="visit.status != 'in visit'" (selectPageEvent)="select($event)" [visit]="visit"></app-visit-header>
         <div class="pages" *ngIf="visit">
             <div class="page" *ngIf="page == 1">
-                <app-visit-information (visitSelectedEvent)="visitSelected($event)" [visit]="visit"></app-visit-information>
+                <app-visit-information (saveVisitEvent)="save($event)" (editVisitEvent)="edit($event)" (visitSelectedEvent)="visitSelected($event)" [visit]="visit"></app-visit-information>
             </div>
             <div class="page" *ngIf="page == 2">
                 <app-visit-diagnosis [visit]="visit" *ngIf="visit.medicalFile"></app-visit-diagnosis>
