--- a/src/app/components/dashboard/content/patient-visit/visit-information/visit-loader/visit-loader.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-information/visit-loader/visit-loader.component.html
@@ -8,7 +8,7 @@
                 <p>
                     Si le dossie medical n'existe pas
                 </p>
-                <button class="secondary-button" (click)="showNewMedicalFile = true">
+                <button class="secondary-button" (click)="showNewMedicalFile = true" (click)="openMedicalFileSubmitter()">
                     Creé le <i class="fa fa-plus"></i>
                 </button>
             </div>
@@ -49,7 +49,7 @@
             <div class="stretch-container" *ngIf="visit.status == 'in visit'">
                 <h5>Condition ou maladie</h5>
                 <div class="search-container">
-                    <app-search-input [submittedItem]="visit.condition" [searchFunction]="searchCondtion" [placeholder]="'Recherché une condition'"></app-search-input>
+                    <app-search-input (onChange)="change($event)" [submittedItem]="visit.condition" [searchFunction]="searchCondtion" [placeholder]="'Recherché une condition'"></app-search-input>
                 </div>
             </div>
             <div *ngIf="visit.status != 'in visit'">
