--- a/src/app/components/global/pop-up-window/pop-up-window.component.css
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.css
@@ -26,3 +26,22 @@
     font-size: 16px;
     padding: 2px;
 }
+
+.new-medical-file {
+    width: 560px;
+    padding: 16px;
+}
+
+.content {
+    background: white;
+}
+
+.black-window {
+    background: rgba(0, 0, 0, 0.25);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
+}
