--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -23,5 +23,11 @@
         <app-prescription-model-submitter *ngIf="windowPage == 'prescription-model-submitter'" (closeEvent)="close()"></app-prescription-model-submitter>
         <app-document-submitter *ngIf="windowPage == 'document-submitter'" (closeEvent)="close()"></app-document-submitter>
         <app-certificat-models *ngIf="windowPage == 'certificat-models'" (closeEvent)="close()"></app-certificat-models>
+        <div class="new-medical-file" *ngIf="windowPage == 'medical-file-submitter'">
+            <div class="black-window" *ngIf="contentBlackWindow"></div>
+            <div class="content primary-radius">
+                <app-new-medical-file [throwInteraction]="true" (closeEvent)="close()" (blackWindowEvent)="contentBlackWindow = !contentBlackWindow"></app-new-medical-file>
+            </div>
+        </div>
     </div>
 </div>
