--- a/src/app/components/global/search-input/search-input.component.html
+++ b/src/app/components/global/search-input/search-input.component.html
@@ -1,6 +1,6 @@
 <div class="search-container">
-    <input (blur)="blur($event)" *ngIf="!formControlName" #input type="text" class="primary-input" [(ngModel)]="submittedItem.name" placeholder="{{placeholder}}" (keyup)="search($event)">
-    <input (blur)="blur($event)" *ngIf="formControlName" formControlName="formControlName" #input type="text" class="primary-input" [(ngModel)]="submittedItem.name" placeholder="{{placeholder}}" (keyup)="search($event)">
+    <input (blur)="blur($event)" (change)="change($event)" *ngIf="!formControlName" #input type="text" class="primary-input" [(ngModel)]="submittedItem.name" placeholder="{{placeholder}}" (keyup)="search($event)">
+    <input (blur)="blur($event)" (change)="change($event)" *ngIf="formControlName" formControlName="formControlName" #input type="text" class="primary-input" [(ngModel)]="submittedItem.name" placeholder="{{placeholder}}" (keyup)="search($event)">
 
     <div class="search-result" *ngIf="results.length > 0">
         <ul *ngIf="type == 'name'">
