--- a/src/app/components/dashboard/content/general/general-disease-report/general-disease-report.component.css
+++ b/src/app/components/dashboard/content/general/general-disease-report/general-disease-report.component.css
@@ -1,15 +1,19 @@
 .main-container {
     background: white;
     position: relative;
-    padding: 16px 26px;
-    height: 380px;
+    padding: 16px;
 }
 
 h5 {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     margin: 0px;
     margin-bottom: 16px;
+}
+
+.canvas-container {
+    height: 320px;
+    position: relative;
 }
 
 canvas {
@@ -17,4 +21,5 @@ canvas {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    max-width: 80%;
 }
