--- a/src/app/components/global/evolution-cart/evolution-cart.component.css
+++ b/src/app/components/global/evolution-cart/evolution-cart.component.css
@@ -3,7 +3,7 @@
     color: white;
     position: relative;
     border-radius: 12px;
-    height: 160px;
+    height: 170px;
 }
 
 .cart-container.white {
@@ -19,7 +19,7 @@
 }
 
 .top i {
-    font-size: 46px;
+    font-size: 42px;
 }
 
 .right {
@@ -47,17 +47,22 @@
 
 .bottom {
     font-size: 12px;
-    margin-top: 26px;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    left: 0px;
+    padding: 16px;
 }
 
 .bottom h6 {
-    font-size: 11px;
+    font-size: 16px;
     margin: 0px;
-    font-weight: bold;
+    font-weight: 100;
+    color: rgba(240, 240, 240);
 }
 
 .bottom span {
-    font-size: 24px;
+    font-size: 26px;
     font-weight: bold;
 }
 
