--- a/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room.component.css
+++ b/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room.component.css
@@ -1,12 +1,17 @@
 .main-container {
     background: white;
-    padding: 16px 26px;
+    padding: 16px 16px;
     height: 380px;
 }
 
 .main-container h5 {
     margin: 0px;
     margin-bottom: 16px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
+}
+
+.no-data-message {
+    margin: 0px !important;
+    font-size: 12px;
 }
