--- a/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room-patient/general-waiting-room-patient.component.html
+++ b/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room-patient/general-waiting-room-patient.component.html
@@ -7,6 +7,6 @@
     <div class="info-container">
         <h5>{{visit.medicalFile.lastname}} {{visit.medicalFile.name}}</h5>
         <p class="age">l'age : <span>{{ age }} ans</span> </p>
-        <p class="visit-time"><span>{{visit.arrivalTime}}</span> </p>
+        <p class="visit-time"> le temps d'arrivé <span>{{visit.arrivalTime}}</span> </p>
     </div>
 </div>
