--- a/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room-patient/general-waiting-room-patient.component.css
+++ b/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room-patient/general-waiting-room-patient.component.css
@@ -1,10 +1,11 @@
 .main-container {
     padding: 8px 0px;
+    margin-bottom: 8px;
 }
 
 .image-container {
-    max-width: 72px;
-    min-width: 72px;
+    max-width: 96px;
+    min-width: 96px;
     position: relative;
 }
 
@@ -25,9 +26,12 @@
 .info-container p {
     margin: 0px;
     margin-top: 4px;
+    color: #888;
+    font-size: 12px;
 }
 
-.visit-time {
+.visit-time span,
+.age span {
     background: rgba(254, 101, 85, 0.05);
     display: inline-block;
     padding: 1px 4px;
@@ -38,6 +42,7 @@
 
 .visit-time span {
     margin: 0px 2px;
+    font-weight: bold;
 }
 
 .info-container h5 {
@@ -54,7 +59,4 @@
     font-size: 10px;
 }
 
-.age span {
-    color: #212121;
-    font-weight: bold;
-}
+.age span {}
